--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>amazon.com</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="amazon.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
             <div class="nav-lang border">
                 <p>English</p>
                 <div class="nav-lang-img">
-                    <img src="/CLASSROOM/Amazon/ind flag.png">
+                    <img src="./amazon_logo.png">
                 </div>
             </div>
             <div class="nav-signin border">
@@ -68,7 +68,7 @@
     <div class="hero-section">
         <div class="hero-msg">
             <p>
-                You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a>Click here to go to amazon.in</a>
+                You are on amazon.com. You can also shop on Amazon India for millions of products with fast local delivery. <a href="https://www.amazon.com/">Click here to go to amazon.in</a>
             </p>
         </div>
     </div>
